# gideon

./: .env.example  .gitignore  LICENSE  README.md  bcolors.py  docker-compose.yml  filename_formats.py  main.py  pyproject.toml  remove_duplicate_files.py  rename_article_or_book.py  rename_files.py  rename_invoice_or_report.py  requirements.txt  setup.py  start-model-service.sh  test_rename_validation.py
.cursor/rules/: python-rules.mdc
src/: __init__.py  constants.py  dir_walker.py  duplicate_files.py  filename_formats.py  organize_files.py  remove_duplicate_files.py  rename_article_or_book.py  rename_files.py  rename_invoice_or_report.py  validators.py
src/gideon/: __init__.py  constants.py  delete_duplicated_files.py  dir_walker.py  main.py  organize_files.py  rename_files.py  validators.py
src/gideon/agents/: __init__.py  base.py  classifier.py  renamer.py  test_renamer.py
src/gideon/cli/: main.py
src/gideon/cli/commands/: __init__.py  organize.py  remove_duplicates.py  rename.py
src/gideon/core/: config.py
src/gideon/formarters/: formarters.py
src/gideon/langchain_integration/: __init__.py  agent.py  classifiers.py  document_processor.py  output_parsers.py  prompts.py  renamer_agent.py  renamer_agents.py  renaming_agents.py
src/gideon/langchain_integration/llm_services/: __init__.py  base.py  factory.py  gemini_service.py  ollama_service.py
src/gideon/llm/: __init__.py  ai_docker_model.py  base.py  dockerai.py  factory.py  ollama.py
src/gideon/models/: document.py
src/gideon/services/: file_service.py  rename_service.py  test_file_service.py
src/gideon/utils/: __init__.py  bcolors.py  logging.py  managers.py  parsers.py  strings.py
src/gideon/validators/: __init__.py  filename_validator.py
src/langchain_integration/: agent.py  classifiers.py
utils/: managers.py
