[project]
name = "gideon"
version = "0.1.0"
description = "Artificially Intelligent Personal Assistant"
authors = [
    {name = "Alejandro Sánchez Yalí", email = "asanchezyali@gmail.com"}
]
dependencies = [
    "langchain>=0.1.5",
    "langchain-community>=0.0.20",
    "langchain-core>=0.1.22",
    "langchain-text-splitters>=0.0.1",
    "langchain-google-genai>=0.0.11",
    "langchain-ollama>=0.3.2",
    "google-generativeai>=0.3.2",
    "pypdf>=4.0.1",
    "ollama>=0.1.7",
    "pydantic>=2.6.3",
    "tiktoken>=0.6.0",
    "faiss-cpu>=1.7.4",
    "typing-extensions>=4.10.0",
    "typer>=0.9.0",
    "rich>=13.7.1",
    "unstructured>=0.12.5",
    "python-magic>=0.4.27",
    "pypdf2>=3.0.1",
    "pydantic-core>=2.16.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
gideon = "gideon.main:app"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# Enable pycodestyle ('E') and Pyflakes ('F') codes by default
select = ["E", "F"]
ignore = []
fixable = ["E", "F"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Ignore unused imports in __init__.py files
"__init__.py" = ["F401"]
