[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gideon"
version = "0.1.0"
description = "AI-powered CLI tool for file organization"
authors = [
    {name = "Alejandro Sánchez Yalí", email = "asanchezyali@gmail.com"}
]
dependencies = [
    "typer",
    "rich",
    "langchain",
    "langchain-community",
    "langchain-core",
    "pydantic",
    "pydantic-settings",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
gideon = "gideon.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/gideon"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# Enable pycodestyle ('E') and Pyflakes ('F') codes by default
select = ["E", "F"]
ignore = []
fixable = ["E", "F"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Ignore unused imports in __init__.py files
"__init__.py" = ["F401"]
